--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "spatie/laravel-permission": "^6.3",
         "tightenco/ziggy": "^1.8"
+        "simplesoftwareio/simple-qrcode": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
